# dgaard

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Ideas.md  README.md  build.bash  config.example.toml  rust-toolchain.toml  shell.nix
.claude/agents/brainstorm/: AGENT.md
.claude/agents/code-reviewer/: AGENT.md
.claude/agents/debug-investigator/: AGENT.md
.claude/agents/planner/: AGENT.md
.claude/agents/test-strategist/: AGENT.md
.claude/hooks/: block-dangerous-commands.sh
.claude/skills/blueprint/: SKILL.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/plan-run/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: release-adblockptimize.yml  release-dgaard-monitor.yml  release-dgaard.yml
.woodpecker/: pipeline.nix  woodpecker.yaml
adblockptimize/: Cargo.toml  README.md  Roadmap.md
adblockptimize/src/: abp.rs  cli.rs  error.rs  formatter.rs  http.rs  io.rs  main.rs  model.rs  parser.rs
dgaard/: CLAUDE.md  Cargo.toml
dgaard-monitor/: CLAUDE.md  Cargo.toml  README.md  Roadmap.md  dgaard-monitor.example.toml
dgaard-monitor/src/: cli.rs  config.rs  error.rs  forwarding.rs  main.rs  protocol.rs  state.rs  util.rs
dgaard-monitor/src/connectivity/: api.rs  mcp.rs  mcp_token_auth_provider.rs  mod.rs  websocket.rs
dgaard-monitor/src/io/: index.rs  mod.rs  socket.rs  watcher.rs
dgaard-monitor/src/tui/: app.rs  keys.rs  layout.rs  mod.rs  util.rs
dgaard-monitor/src/tui/tabs/: about.rs  dashboard.rs  mod.rs  queries.rs  talkers.rs  timelines.rs
dgaard-monitor/src/tui/widgets/: flag_dist.rs  live_feed.rs  mod.rs
dgaard/src/: stats.rs  updater.rs
dgaard/src/config/: mod.rs  model.rs
dgaard/src/dga/: entropy.rs
dgaard/src/dns/: mod.rs  packet.rs  upstream.rs
dgaard/src/filter/: engine.rs  host_index.rs  io.rs  parser.rs  types.rs
dgaard/src/model/: action.rs  mod.rs
dgaard/src/resolve/: mod.rs  qtype.rs
dgaard/src/runtime/: shutdown.rs  stat_collector.rs
docs/: Cross-compilation.md  Ideas.md  List_formats.md  Parental-control.md  Roadmap.md
openwrt/: Makefile  dgaard.init
src/: blocklist.rs  cli.rs  config.rs  dga.rs  dns.rs  domain.rs  lib.rs  main.rs  model.rs  proxy.rs  resolve.rs  resolver.rs  runtime.rs  stats.rs  task.rs  updater.rs  utils.rs
src/config/: mod.rs  model.rs  parser.rs
src/dga/: mod.rs  ngram.rs
src/dns/: mod.rs  packet.rs
src/filter/: abp.rs  bloom.rs  engine.rs  fst.rs  host_index.rs  io.rs  mod.rs  types.rs
src/model/: action.rs  domain.rs  mod.rs
src/resolve/: heuristics.rs  matcher.rs  mod.rs  patterns.rs  scoring.rs
src/runtime/: mod.rs  stat_collector.rs
