[package]
name = "dgaard"
authors = ["Sébastien LUNDI"]
description = "A high-performance, stratified DNS security proxy for OpenWrt and SME networks. Featuring DGA detection, Shannon entropy analysis, multi-language N-Gram models, and zero-copy filtering. Built for speed and privacy."
readme = "README.md"
license = "Apache-2.0"
repository = "https://codeberg.org/slundi/dgaard"
keywords = ["dns", "proxy", "security", "filter", "heuristics"]
categories = ["network-programming", "embedded-software", "cryptography"]
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
getrandom = "0.4.2"
num_cpus = "1.17.0"
# Async runtime - 'rt' and 'macros' only to keep binary size small for OpenWrt
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }

# DNS Protocol handling and for Domain/TLD parsing logic
hickory-resolver = "0.25.2"
# to handle multiple socket on the same port
socket2 = "0.6.3"

# Fast hashing for the u64 fingerprints (ID-ing domains/rules)
twox-hash = "2.1.2"

# Configuration parsing
toml-span = "0.7.1"

# High-performance matching
# RegexSet is used for the "Complex" rule tier
regex = { version = "1.12.3", default-features = false, features = ["std", "perf", "unicode-perl"] }

url = "2.5.8"

# to have an HTTP client availble to download lists
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "ring", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1.3"

# Finite State Transducers for memory-efficient suffix/wildcard matching
fst = "0.4.7"

# Bloom Filter for NRD and large blocklists (Low RAM footprint)
bloom = "0.3.2"

# CLI argument parsing
gumdrop = "0.8"

# Logging (Lightweight)
log = "0.4.29"
env_logger = "0.11"

# Binary serialization: manual implementation for stats (no serde overhead)
rkyv = "0.8.15"

# Used for the 'Hot Cache' / Favorites
lru = "0.16"

dashmap = "6.1.0"
arc-swap = "1.9.0"
bitflags = "2.11.0"

[profile.release]
# Optimization settings for OpenWrt's limited storage and CPU
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize optimization at the cost of compile time
panic = "abort"   # Remove stack unwinding to save binary space
strip = true      # Automatically strip symbols from the binary

[workspace.metadata.cargo-machete]
ignored = []
