[workspace]
members = ["dgaard", "dgaard-monitor", "adblockptimize"]
resolver = "2"

[profile.release]
# Optimization settings for OpenWrt's limited storage and CPU
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize optimization at the cost of compile time
panic = "abort"   # Remove stack unwinding to save binary space
strip = true      # Automatically strip symbols from the binary

[workspace.metadata.cargo-machete]
ignored = []
