[package]
name = "dgaard-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
gumdrop = "0.8"
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
bitflags = "2.11.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3"
