[package]
name = "dgaard-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
gumdrop = "0.8"
inotify = "0.11"
thiserror = "2.0.18"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "io-std",
    "sync",
    "time",
    "signal",
    "fs",
] }
bitflags = "2.11.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

# to have an HTTP client availble to download lists
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "ring", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1.3"

async-trait = "0.1"
serde_json = "1.0"
rust-mcp-sdk = "0.9"

axum = { version = "0.8", features = ["ws"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
